--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,8 @@ p {
     padding: 5px;
   }
   .carousel-item {
-    height: 700px;
+    height: auto;
+    padding: 5%;
     text-align: center;
   }
   .card-body h2 {
