--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ p {
     padding: 5px;
   }
   .carousel-item {
-    height: auto;
+    height: 1000px;
     padding: 5%;
     text-align: center;
   }
