--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,9 @@ p {
     border-radius: 90px;
     padding: 5px;
   }
+  .carousel-item h2 {
+    padding: 100px 50px 0 50px;
+  }
   .card-body h2 {
     font-size: 1.5em;
   }
