--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ p {
     padding: 5px;
   }
   .carousel-item h2 {
-    padding: 100px 50px 0 50px;
+    padding: 10px;
   }
   .card-body h2 {
     font-size: 1.5em;
