--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,8 @@ p {
     border-radius: 90px;
     padding: 5px;
   }
-  .carousel-item h2 {
-    padding: 10px;
+  .carousel-inner {
+    background-size: cover;
   }
   .card-body h2 {
     font-size: 1.5em;
