--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ p {
   }
   .carousel-inner {
     background-size: cover;
+    text-align: center;
   }
   .card-body h2 {
     font-size: 1.5em;
