--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,10 @@ p {
     background-size: cover;
     text-align: center;
   }
+  .carousel-inner h2 {
+    font-size: 1em;
+    text-align: center;
+  }
   .card-body h2 {
     font-size: 1.5em;
   }
