--- a/css/styles.css
+++ b/css/styles.css
@@ -131,9 +131,9 @@ p {
     background-size: cover;
     text-align: center;
   }
-  .carousel-inner h2 {
-    font-size: 1em;
+  .carousel-item {
     text-align: center;
+    height: 700px;
   }
   .card-body h2 {
     font-size: 1.5em;
