--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ p {
     padding: 5px;
   }
   .carousel-item {
-    font-size= auto;
+    font-size: auto;
     text-align: center;
   }
   .card-body h2 {
