--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,8 @@ p {
     border-radius: 90px;
     padding: 5px;
   }
-  .carousel-item {
-    font-size: auto;
+  .carousel-item h2 {
+    font-size: 1.5rem;
     text-align: center;
   }
   .card-body h2 {
